--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,8 @@
+.siteTitle {
+  color: #3BE200;
+  font-size: 24px;
+}
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -33,6 +38,10 @@
   text-align: center;
 }
 
+.nav {
+  text-decoration: none;
+}
+
 .description {
   line-height: 1.5;
   font-size: 1.5rem;
@@ -46,6 +55,21 @@
 
   max-width: 800px;
   margin-top: 3rem;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column
+}
+
+.image {
+  align-self: flex-end;
+  position: fixed;
+  bottom: 3em;
+  right: 3em;
+  max-width: 50%;
+  width: auto;
+  height: auto;
 }
 
 .card {
@@ -72,6 +96,7 @@
 .card h3 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
+  font-family: var(--font-oxygen);
 }
 
 .card p {
