--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,41 @@
+.sidebar {
+  width:auto;
+  max-width: 33vw;
+  position: fixed;
+  top: 24px;
+  padding-right: 2em;
+}
+
 .siteTitle {
-  color: #3BE200;
-  font-size: 24px;
+  color: #3fda02;
+  font-size: calc(4.5vw);
+  font-style: italic;
+  padding-top: .125em;
+  padding-bottom: .33em;
+  letter-spacing: -4px;
+}
+
+.linkList {
+  padding-left: .25em;
+}
+
+.link {
+  margin-bottom: 2em;
+  font-size: .9em;
+}
+
+.link:hover {
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.linkSubtitle {
+  font-weight:100;
+}
+
+.body {
+  max-width:66vw;
+  margin-left: 33vw;
 }
 
 .container {
@@ -59,59 +94,23 @@
 
 .flex {
   display: flex;
-  flex-direction: column
+  flex-direction: row
+}
+
+.imageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .image {
   align-self: flex-end;
-  position: fixed;
-  bottom: 3em;
-  right: 3em;
-  max-width: 50%;
+  max-width: 100%;
   width: auto;
   height: auto;
+  overflow: hidden;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition:
-    color 0.15s ease,
-    border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-  font-family: var(--font-oxygen);
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.image:not(:last-child) {
+  padding-bottom: 2em;
 }
