--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,27 +1,35 @@
 .sidebar {
   width:auto;
-  max-width: 33vw;
-  position: fixed;
-  top: 24px;
-  padding-right: 2em;
+  position: sticky;
+  top: 0;
+  padding-top: 2em;
+  padding-bottom: .5em;
+  margin-top: -1em;
+  background-color: #fff;
 }
 
 .siteTitle {
   color: #3fda02;
-  font-size: calc(4.5vw);
+  font-size: 13vw;
   font-style: italic;
-  padding-top: .125em;
   padding-bottom: .33em;
-  letter-spacing: -4px;
+  letter-spacing: -3px;
+  text-align: center;
 }
 
 .linkList {
-  padding-left: .25em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .link {
   margin-bottom: 2em;
   font-size: .9em;
+  padding-left: .5em;
+  padding-right: .5em;
+  text-decoration: underline;
 }
 
 .link:hover {
@@ -30,87 +38,144 @@
 }
 
 .linkSubtitle {
-  font-weight:100;
-}
-
-.body {
-  max-width:66vw;
-  margin-left: 33vw;
-}
-
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0 0 1rem;
-  line-height: 1.15;
-  font-size: 3.6rem;
-}
-
-.title {
-  text-align: center;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.nav {
-  text-decoration: none;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
+  display: none;
 }
 
 .flex {
   display: flex;
-  flex-direction: row
+  flex-direction: column;
 }
 
 .imageContainer {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  max-height: calc(100vh - 5em);
 }
 
 .image {
   align-self: flex-end;
   max-width: 100%;
   width: auto;
-  height: auto;
-  overflow: hidden;
+  height: 100%;
 }
 
 .image:not(:last-child) {
   padding-bottom: 2em;
+}
+
+@media screen and (min-width:720px) {
+  .sidebar {
+    width:auto;
+    position: sticky;
+    top: 0;
+    padding-top: 2em;
+    margin-top: -1em;
+    background-color: #fff;
+  }
+  
+  .siteTitle {
+    color: #3fda02;
+    font-size: calc(4.5vw);
+    font-style: italic;
+    padding-bottom: .33em;
+    letter-spacing: -3px;
+    text-align: left;
+  }
+  
+  .linkList {
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    justify-content: left;
+  }
+  
+  .link {
+    margin-bottom: 2em;
+    font-size: .9em;
+    padding-left: 0em;
+    padding-right: 0em;
+  }
+  
+  .link:not(:first-child) {
+    padding-left: 2em;
+  }
+  
+  .link:hover {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+  }
+  
+  .linkSubtitle {
+    display: none;
+  }
+  
+  .flex {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .image {
+    align-self: flex-end;
+    width: auto;
+    height: 100%;
+  }
+  
+  .image:not(:last-child) {
+    padding-bottom: 2em;
+  } 
+}
+
+@media screen and (min-width:1025px) {
+  .sidebar {
+    width:auto;
+    max-width: 33vw;
+    position: fixed;
+    padding-top: 1em;
+    top: 24px;
+    padding-right: 2em;
+  }
+
+  .siteTitle {
+    color: #3fda02;
+    font-size: calc(4.5vw);
+    font-style: italic;
+    margin-top: 0;
+    padding-top: 0em;
+    padding-bottom: .33em;
+    letter-spacing: -4px;
+  }
+
+  .linkList {
+    padding-left: .25em;
+    flex-direction: column;
+  }
+
+  .link:not(:first-child) {
+    padding-left: 0em;
+  }
+
+  .linkSubtitle {
+    font-weight:100;
+    display: inline-block;
+  }
+  
+  .flex {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .body {
+    margin-top: 1em;
+    max-width:66vw;
+    margin-left: 33vw;
+  }
+
+  .imageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    max-height: calc(100vh - 5em);
+    overflow-y: auto;
+  }
 }
