replaceed with  compressed images

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -112,7 +112,7 @@
   
   .image {
     align-self: flex-end;
-    width: auto;
+    width: 100%;
     height: 100%;
   }
   
@@ -169,6 +169,7 @@
     margin-top: 1em;
     max-width:66vw;
     margin-left: 33vw;
+    width: 66%;
   }
 
   .imageContainer {
@@ -177,5 +178,6 @@
     align-items: flex-end;
     max-height: calc(100vh - 5em);
     overflow-y: auto;
+    width: 100%;
   }
 }
